wg-sys/wireguard-tools/src/ipc.h

struct wgdevice;
int ipc_set_device(struct wgdevice *dev);
int ipc_get_device(struct wgdevice **dev, const char *interface);
char *ipc_list_devices(void);
void ipc_free_device(struct wgdevice *dev);